2009-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-float-time): Alias to float-time if it exists.

	* ecomplete.el (with-no-warnings): Define it for old Emacsen.
	(ecomplete-add-item): Don't use (featurep 'xemacs) to check if
	float-time is available; suppress compile warning for time-to-seconds.

2009-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-encode.el (mm-encode-buffer): Don't force 7bit encoding since MTA
	may break data.  Suggested by Dmitri Paduchikh <dpaduch@k66.ru>.
	Add the optional argument `encoding' that overrides the default.

	* mml.el (mml-generate-mime-1): Pass encoding defined by a user to
	mm-encode-buffer.

2009-09-04  Glenn Morris  <rgm@gnu.org>

	* qp.el (quoted-printable-encode-string): Use mm-enable-multibyte, or
	mm-disable-multibyte, rather than default-enable-multibyte-characters.
	* utf7.el (utf7-encode, utf7-decode): Use mm-with-multibyte-buffer, or
	mm-with-unibyte-buffer, rather than default-enable-multibyte-characters.
	* mm-util.el (mm-with-unibyte-current-buffer)
	(mm-find-buffer-file-coding-system):
	* yenc.el (yenc-decode-region): Use default-value rather than
	default-enable-multibyte-characters.

2009-09-03  Glenn Morris  <rgm@gnu.org>

	* mm-util.el (mm-emacs-mule, mm-default-multibyte-p):
	* rfc2047.el (rfc2047-encode-message-header): Use default-value rather
	than default-enable-multibyte-characters.

2009-09-02  Karl Kleinpaste  <karl@kleinpaste.org>

	* gnus-art.el (gnus-article-read-summary-keys):
	Fix gnus-buffer-configuration's value temporarily used.

2009-09-02  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (gnus-float-time): New function.
	* gnus-delay.el (gnus-delay-article):
	* gnus-sum.el (gnus-thread-latest-date):
	* gnus-util.el (gnus-user-date): Use gnus-float-time.
	* nnspool.el (nnspool-request-newgroups):
	Use gnus-float-time rather than time-to-seconds.
	* ecomplete.el (ecomplete-add-item): In Emacs, use float-time.

	* gnus-art.el (gnus-signature-face, gnus-header-from-face)